@@ -7,4 +7,4 @@
 #################################################
 
 export NO_OPENMP=1
-CC=fcc CFLAGS="-Kfast -Kocl -Kopenmp -Koptmsg=2 -DWITH_OPENMP -DA64FXCPU -DL2WAYS=4" make
+CC=fcc CFLAGS="-Kfast -Kocl -Kopenmp -Koptmsg=2 -DA64FXCPU -DL2WAYS=4" make
